# ae-tools-app

./: README.md  package.json
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adobe.rs  aep.rs  commands.rs  expressions.rs  fonts.rs  lib.rs  models.rs  projects.rs  session.rs  startup.rs  system.rs  util.rs
src/lib/: api.ts  dashboard.ts  types.ts
src/lib/components/: EverythingStatusPanel.svelte  ExpressionAuditDialog.svelte  FontAuditDialog.svelte  HealthScoreCard.svelte  HeroSection.svelte  InstallCard.svelte  InstallSection.svelte  ProjectIndexPanel.svelte  RecommendationsPanel.svelte  RenderLogDialog.svelte  RenderMonitor.svelte  RenderSettingsDialog.svelte  SessionModePanel.svelte  StartupNoisePanel.svelte  SystemProfileCard.svelte  ToastBanner.svelte
src/routes/: +page.svelte
