[package]
name = "ae-tools-app"
version = "0.1.0"
edition = "2021"
description = "Background helper service powering the Aether FX Optimizer desktop UI."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/your-org/ae-tools-app"
homepage = "https://github.com/your-org/ae-tools-app"
documentation = "https://github.com/your-org/ae-tools-app#readme"
keywords = [
    "tauri",
    "after-effects",
    "optimizer",
    "afterfx",
    "everything-index",
]
categories = ["application", "utilities"]
authors = ["Vertixx <hmu@vertixx.baby>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
